--- a/style.css
+++ b/style.css
@@ -1,50 +1,199 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Work Sans", sans-serif;
+    font-family: "Playwrite DE Grund", cursive;
 }
 
-body{
+body {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 2rem;
     min-height: 100vh;
-
+    background: #000000;
 }
 
-#box{
-    border: 2px solid black;
-    border-radius: 40px;
-    padding: 2rem;
-    width: 30vw;
-    height: 50vh;
-    min-width: fit-content;
-    min-height: fit-content;
+::selection {
+    color: #fff;
+    background: #28af98;
 }
 
-#box h1{
+.head{
+    color: white;
+    font-size: x-large;
+    width: 50vw;
+}
+
+.wrapper {
+    width: 420px;
+    border-radius: 10%;
+    background: #fff;
+    margin: 10px 17px;
+    padding: 25px 28px 45px;
+    box-shadow: 0px 0px 40px rgb(0, 255, 217);
+}
+
+.wrapper header {
+    font-size: 28px;
+    font-weight: 500;
     text-align: center;
 }
 
-.search{
-    border: 2px solid;
-    width: inherit;
-    display: flex;
+.wrapper .search {
+    position: relative;
+    margin: 35px 0 18px;
 }
 
-.search input{
+.search input {
+    height: 53px;
     width: 100%;
     outline: none;
-    padding: 0 41px;
-    /* border: 1px solid #999; */
-    border: none;
+    font-size: 16px;
+    border-radius: 10%;
+    padding: 0 42px;
+    border: 1px solid #999;
 }
 
+.search input:focus {
+    padding: 0 41px;
+    border: 2px solid #28af98;
+}
 
+.search input::placeholder {
+    color: #B8B8B8;
+}
 
+.search :where(i, span) {
+    position: absolute;
+    top: 50%;
+    color: #999;
+    transform: translateY(-50%);
+}
 
+.search i {
+    left: 18px;
+    pointer-events: none;
+    font-size: 16px;
+}
 
+.search input:focus~i {
+    color: #28af98;
+}
+
+.search span {
+    right: 15px;
+    cursor: pointer;
+    font-size: 18px;
+    display: none;
+}
+
+.search input:valid~span {
+    display: block;
+}
+
+.wrapper .info-text {
+    font-size: 13px;
+    color: #9A9A9A;
+    margin: -3px 0 -10px;
+}
+
+.wrapper header {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+.wrapper.active .info-text {
+    display: none;
+}
+
+.info-text span {
+    font-weight: 500;
+}
+
+.wrapper ul {
+    height: 0;
+    opacity: 0;
+    padding-right: 1px;
+    overflow-y: hidden;
+    transition: all 0.2s ease;
+}
+
+.wrapper.active ul {
+    opacity: 1;
+    height: 303px;
+}
+
+.wrapper ul li {
+    display: flex;
+    list-style: none;
+    margin-bottom: 14px;
+    align-items: center;
+    padding-bottom: 17px;
+    border-bottom: 1px solid #D9D9D9;
+    justify-content: space-between;
+}
+
+ul li:last-child {
+    margin-bottom: 0;
+    border-bottom: 0;
+    padding-bottom: 0;
+}
+
+ul .word p {
+    font-size: 22px;
+    font-weight: 500;
+}
+
+ul .word span {
+    font-size: 12px;
+    color: #989898;
+}
+
+ul .word i {
+    color: #999;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+ul .content {
+    max-height: 215px;
+    overflow-y: auto;
+}
+
+ul .content::-webkit-scrollbar {
+    width: 0px;
+}
+
+.content li .details {
+    padding-left: 10px;
+    border-left: 5px solid #28af98;
+}
+
+.content li p {
+    font-size: 17px;
+    font-weight: 500;
+}
+
+.content li span {
+    font-size: 15px;
+    color: #7E7E7E;
+}
+
+.content .synonyms .list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.content .synonyms span {
+    cursor: pointer;
+    margin-right: 5px;
+    text-decoration: underline;
+}
+
+.example .details span {
+    font-style: italic;
+}
