--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     justify-content: center;
     gap: 2rem;
     min-height: 100vh;
-    background: #000000;
+    background: #6196A6;
 }
 
 ::selection {
@@ -22,19 +22,39 @@ body {
     background: #28af98;
 }
 
-.head{
+.head {
     color: white;
     font-size: x-large;
-    width: 50vw;
+    width: 90vw;
+    /* Adjust width for smaller screens */
+    text-align: center;
+}
+
+.nav {
+    position: fixed;
+    top: 0vh;
+}
+
+footer {
+    color: white;
+    font-size: x-large;
+    width: 90vw;
+    /* Adjust width for smaller screens */
+    text-align: center;
+    position: fixed;
+    bottom: 0vh;
 }
 
 .wrapper {
-    width: 420px;
+    width: 90vw;
+    /* Initially responsive width for smaller screens */
+    max-width: 420px;
     border-radius: 10%;
-    background: #fff;
+    /* background: #fff; */
+    background: #E8DED2;
     margin: 10px 17px;
     padding: 25px 28px 45px;
-    box-shadow: 0px 0px 40px rgb(0, 255, 217);
+    box-shadow: 0px 0px 40px E8DED2;
 }
 
 .wrapper header {
@@ -43,7 +63,7 @@ body {
     text-align: center;
 }
 
-.wrapper .search {
+.search {
     position: relative;
     margin: 35px 0 18px;
 }
@@ -71,6 +91,7 @@ body {
     position: absolute;
     top: 50%;
     color: #999;
+    
     transform: translateY(-50%);
 }
 
@@ -95,15 +116,10 @@ body {
     display: block;
 }
 
-.wrapper .info-text {
+.info-text {
     font-size: 13px;
     color: #9A9A9A;
     margin: -3px 0 -10px;
-}
-
-.wrapper header {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
 }
 
 .wrapper.active .info-text {
@@ -150,7 +166,9 @@ ul .word p {
 
 ul .word span {
     font-size: 12px;
-    color: #989898;
+    /* color: #989898; */
+    color: #FD5959;
+    
 }
 
 ul .word i {
@@ -160,7 +178,7 @@ ul .word i {
 }
 
 ul .content {
-    max-height: 215px;
+    max-height: 225px;
     overflow-y: auto;
 }
 
@@ -180,7 +198,9 @@ ul .content::-webkit-scrollbar {
 
 .content li span {
     font-size: 15px;
-    color: #7E7E7E;
+    /* color: #7E7E7E; */
+    color: #FD5959;
+
 }
 
 .content .synonyms .list {
@@ -196,4 +216,77 @@ ul .content::-webkit-scrollbar {
 
 .example .details span {
     font-style: italic;
+}
+
+/* MEDIA QUERIES FOR RESPONSIVENESS */
+
+/* Tablets and small desktops */
+@media (min-width: 600px) and (max-width: 1024px) {
+    .wrapper {
+        width: 80vw;
+        max-width: 600px;
+        padding: 30px 40px;
+    }
+
+    .search input {
+        height: 60px;
+        font-size: 18px;
+    }
+
+    .head {
+        font-size: xx-large;
+        width: 70vw;
+    }
+}
+
+/* Mobile phones */
+@media (max-width: 599px) {
+    .wrapper {
+        width: 90vw;
+        padding: 20px 20px;
+    }
+
+    .search input {
+        height: 45px;
+        font-size: 14px;
+    }
+
+    .head {
+        font-size: large;
+        width: 90vw;
+    }
+
+    .wrapper ul li .details p {
+        font-size: 20px;
+    }
+
+    .wrapper ul li .details span {
+        font-size: 10px;
+    }
+}
+
+/* Extra small devices (up to 320px) */
+@media (max-width: 320px) {
+    .wrapper {
+        width: 95vw;
+        padding: 15px 15px;
+    }
+
+    .search input {
+        height: 40px;
+        font-size: 12px;
+    }
+
+    .head {
+        font-size: medium;
+        width: 95vw;
+    }
+
+    .wrapper ul li .details p {
+        font-size: 18px;
+    }
+
+    .wrapper ul li .details span {
+        font-size: 9px;
+    }
 }
